--- a/pages/indexPhysics.html
+++ b/pages/indexPhysics.html
@@ -4,7 +4,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/assets/logoMinimalisticMaterials.jpg"
+      href="../assets/logoMinimalisticMaterials.jpg"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
