--- a/pages/indexChemistry.html
+++ b/pages/indexChemistry.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="/assets/logoMinimalisticMaterials.jpg">
+    <link rel="icon" type="image/png" href="../assets/logoMinimalisticMaterials.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chemistry by Minimalistic Materials</title>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
