--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         <!-- Subjects Section -->
         <section class="subjects">
             <a href="pages/indexChemistry.html" class="subject-card">
-                <img src="/assets/logoChemistry.png" alt="Chemistry Logo">
+                <img src="assets/logoChemistry.png" alt="Chemistry Logo">
                 <h3>Chemistry</h3>
                 <p>Explore detailed notes, chapter summaries, and key concepts for Class 11 & 12 Chemistry.</p>
             </a>
             <a href="pages/indexPhysics.html" class="subject-card">
-                <img src="/assets/logoPhysics.png" alt="Physics Logo">
+                <img src="assets/logoPhysics.png" alt="Physics Logo">
                 <h3>Physics</h3>
                 <p>Dive into Physics concepts with in-depth notes and solved examples for Class 11 & 12.</p>
             </a>
             <a href="pages/indexMaths.html" class="subject-card">
-                <img src="/assets/logoMathematics.webp" alt="Mathematics Logo">
+                <img src="assets/logoMathematics.webp" alt="Mathematics Logo">
                 <h3>Mathematics</h3>
                 <p>Get clear, step-by-step solutions and explanations for Math topics in Class 11 & 12.</p>
             </a>
