--- a/pages/physics/mechanical-properties-solids.html
+++ b/pages/physics/mechanical-properties-solids.html
@@ -4,13 +4,13 @@
     <link
       rel="icon"
       type="image/png"
-      href="/assets/logoMinimalisticMaterials.jpg"
+      href="../../assets/logoMinimalisticMaterials.jpg"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Chapter 9: Mechanical Properties of Solids</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
